<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Power Monitor</string>
    <string name="Power">Power</string>
    <string name="Current">Current</string>
    <string name="Voltage">Voltage</string>
    <string name="ScaleP">Scale +</string>
    <string name="ScaleN">Scale -</string>
    <string name="TimeP">Time +</string>
    <string name="TimeN">Time -</string>
    <string name="Dump">Dump to SDCard</string>
</resources>
